Make the code available under MPLv2 It's no longer ARR

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ base {
 	archivesName = 'quilt_server_bootstrap'
 }
 
-version = '0.1.0+ennui'
+version = '0.1.0'
 
 repositories {
     mavenCentral()
